# backend/api/auth/login.php
@@ -34,8 +34,7 @@ if (isset($data->username) && isset($data->password)) {
                     "id" => $user_id,
                     "username" => $row['username']
                 ],
-                "access_token" => $access_token,
-                "refresh_token" => $refresh_token
+                "access_token" => $access_token
             ]);
         } else {
             // Invalid password
